--- a/pugs/main.pug
+++ b/pugs/main.pug
@@ -3,6 +3,7 @@ main.main
     include about.pug
     include services.pug
     include works.pug
+    include price.pug
     include team.pug
     include blog.pug
     include form.pug
